[gd_scene load_steps=29 format=2]

[ext_resource path="res://rocket/background_clouds2.png" type="Texture" id=1]
[ext_resource path="res://rocket/gradient_background.png" type="Texture" id=2]
[ext_resource path="res://rocket/cloud2.png" type="Texture" id=3]
[ext_resource path="res://rocket/background_clouds1.png" type="Texture" id=4]
[ext_resource path="res://rocket/ground.png" type="Texture" id=5]
[ext_resource path="res://rocket/cloud1.png" type="Texture" id=6]
[ext_resource path="res://rocket/sky_background.png" type="Texture" id=7]
[ext_resource path="res://rocket/rocket.tscn" type="PackedScene" id=8]
[ext_resource path="res://main.gd" type="Script" id=9]
[ext_resource path="res://rocket/smoke.png" type="Texture" id=10]
[ext_resource path="res://rocket/planet.tscn" type="PackedScene" id=11]
[ext_resource path="res://rocket/fast_stars.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "big_clouds"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("background_clouds1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 584 ), Vector2( 960, 549.141 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background_clouds2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 720 ), Vector2( 960, 765.112 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("background_clouds:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2060.56, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("background_clouds3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2117.09, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1000, 2000, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.283019, 1 )
colors = PoolColorArray( 0, 1, 0.458008, 1, 1, 0, 0.609375, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1000, 50, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.35
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("slow_stars:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 956.897, -2939.18 ), Vector2( 956.897, -2715.28 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.132075, 0.314465, 0.610063, 0.880503, 1 )
colors = PoolColorArray( 1, 0.756863, 0.121569, 1, 1, 0.388235, 0, 1, 1, 1, 1, 1, 0.62207, 0.62207, 0.62207, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 100, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
scale_random = 0.3
color_ramp = SubResource( 8 )

[sub_resource type="Animation" id=10]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("rocket:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 959.18, 843.374 ), Vector2( 959.18, 500.895 ), Vector2( 959.18, -2201.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rocket/Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=11]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("planet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 177.594, -3474.41 ), Vector2( 177.594, -1392.76 ) ]
}

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.861635, 1 )
colors = PoolColorArray( 1, 1, 1, 0.835294, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0.765909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0749999 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 100, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -50, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.41
scale = 0.75
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[node name="main" type="Node2D"]
script = ExtResource( 9 )

[node name="sky_background" type="Sprite" parent="."]
position = Vector2( 960, 542 )
scale = Vector2( 1, 1.0037 )
texture = ExtResource( 7 )

[node name="gradient_background" type="Sprite" parent="sky_background"]
position = Vector2( 0, -1190.8 )
scale = Vector2( 1, 1.40454 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="sky_background/gradient_background"]
margin_left = -962.0
margin_top = -1731.0
margin_right = 958.0
margin_bottom = -463.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_clouds" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.329412 )

[node name="cloud1" type="Sprite" parent="background_clouds"]
position = Vector2( 121.113, -288.737 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud4" type="Sprite" parent="background_clouds"]
position = Vector2( 518.726, 67.9781 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud10" type="Sprite" parent="background_clouds"]
position = Vector2( 1879.7, -406.885 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud11" type="Sprite" parent="background_clouds"]
position = Vector2( 1836.53, -91.067 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud9" type="Sprite" parent="background_clouds"]
position = Vector2( 12.0537, 45.2574 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud5" type="Sprite" parent="background_clouds"]
position = Vector2( 891.346, -554.57 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud6" type="Sprite" parent="background_clouds"]
position = Vector2( 1400.29, 4.36008 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud2" type="Sprite" parent="background_clouds"]
position = Vector2( 763.534, -189.926 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="background_clouds"]
position = Vector2( 1478.46, -501.591 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud7" type="Sprite" parent="background_clouds"]
position = Vector2( 1389.85, -247.119 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud8" type="Sprite" parent="background_clouds"]
position = Vector2( 445.444, -424.327 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="background_clouds3" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.329412 )
position = Vector2( 2117.09, 0 )

[node name="cloud1" type="Sprite" parent="background_clouds3"]
position = Vector2( 121.113, -288.737 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud4" type="Sprite" parent="background_clouds3"]
position = Vector2( 518.726, 67.9781 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud10" type="Sprite" parent="background_clouds3"]
position = Vector2( 1879.7, -406.885 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud11" type="Sprite" parent="background_clouds3"]
position = Vector2( 1836.53, -91.067 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud9" type="Sprite" parent="background_clouds3"]
position = Vector2( 12.0537, 45.2574 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud5" type="Sprite" parent="background_clouds3"]
position = Vector2( 891.346, -554.57 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud6" type="Sprite" parent="background_clouds3"]
position = Vector2( 1400.29, 4.36008 )
scale = Vector2( 0.494046, 0.494046 )
texture = ExtResource( 6 )

[node name="cloud2" type="Sprite" parent="background_clouds3"]
position = Vector2( 763.534, -189.926 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="background_clouds3"]
position = Vector2( 1478.46, -501.591 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud7" type="Sprite" parent="background_clouds3"]
position = Vector2( 1389.85, -247.119 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="cloud8" type="Sprite" parent="background_clouds3"]
position = Vector2( 445.444, -424.327 )
scale = Vector2( 0.52529, 0.52529 )
texture = ExtResource( 3 )

[node name="background_clouds1" type="Sprite" parent="."]
position = Vector2( 960, 584 )
texture = ExtResource( 4 )

[node name="background_clouds2" type="Sprite" parent="."]
position = Vector2( 960, 720 )
texture = ExtResource( 1 )

[node name="ground" type="Sprite" parent="."]
position = Vector2( 960, 944 )
texture = ExtResource( 5 )

[node name="big_clouds" type="AnimationPlayer" parent="."]
autoplay = "big_clouds"
anims/big_clouds = SubResource( 1 )

[node name="slow_stars" type="Particles2D" parent="."]
position = Vector2( 956.897, -2939.18 )
amount = 200
lifetime = 10.0
preprocess = 60.0
speed_scale = 0.25
visibility_rect = Rect2( -1000, -1000, 2000, 3000 )
process_material = SubResource( 2 )
texture = ExtResource( 10 )

[node name="fast_stars" type="Particles2D" parent="."]
visible = false
position = Vector2( 965.513, -3110.23 )
amount = 150
lifetime = 5.0
preprocess = 10.0
speed_scale = 3.0
process_material = SubResource( 5 )
texture = ExtResource( 12 )

[node name="stars" type="AnimationPlayer" parent="."]
anims/slow_stars = SubResource( 6 )

[node name="rocket" parent="." instance=ExtResource( 8 )]
position = Vector2( 959.18, 843.374 )

[node name="Particles2D" type="Particles2D" parent="rocket"]
position = Vector2( 0, 36.6539 )
emitting = false
amount = 200
lifetime = 5.0
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="rocket"]
position = Vector2( 0, -310.915 )
current = true

[node name="foreground_clouds" type="Node2D" parent="."]

[node name="cloud1" type="Sprite" parent="foreground_clouds"]
position = Vector2( 298.65, -8.14465 )
texture = ExtResource( 6 )

[node name="cloud4" type="Sprite" parent="foreground_clouds"]
position = Vector2( 875.165, -506.616 )
texture = ExtResource( 6 )

[node name="cloud6" type="Sprite" parent="foreground_clouds"]
position = Vector2( 1806.65, -83.6706 )
texture = ExtResource( 6 )

[node name="cloud2" type="Sprite" parent="foreground_clouds"]
position = Vector2( 1079.46, -52.4532 )
texture = ExtResource( 3 )

[node name="cloud5" type="Sprite" parent="foreground_clouds"]
position = Vector2( 90.072, -445.188 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="foreground_clouds"]
position = Vector2( 1746.61, -477.916 )
texture = ExtResource( 3 )

[node name="rocket_launch" type="AnimationPlayer" parent="."]
anims/launch = SubResource( 10 )
anims/planet = SubResource( 11 )

[node name="planet" parent="." instance=ExtResource( 11 )]
position = Vector2( 177.594, -3474.41 )
scale = Vector2( 0.569154, 0.569154 )

[node name="smoke" type="Particles2D" parent="."]
position = Vector2( 958.159, 877.417 )
amount = 100
lifetime = 2.0
preprocess = 5.0
speed_scale = 0.25
process_material = SubResource( 16 )
texture = ExtResource( 10 )
